--- a/InternshipSkeleton/Views/LogInfo/Index.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/Index.cshtml
@@ -11,11 +11,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 @{
-    var searchBy = Model.SearchBy;
-    var searchInput = Model.SearchInput;
     var sortBy = Model.SortBy;
     var sortDir = Model.SortDirection;
     var id = Model.PageNumber;
+    var searchDict = Model.SearchDictionary;
 
     List<String> categories = new List<String>() { "EmailAddress", "TimeStamp", "WebRequestID", "Message", "MethodName", "Object", "Important" };
 
@@ -31,8 +30,7 @@
 }
 
 <div class="container" style="padding-top: 50px !important;">
-    @using (Html.BeginRouteForm("Search", new { controller = "LogInfo", action = "Index" }))
-    {
+    <form name="searchForm">
         @Html.HiddenFor(m => m.SortBy)
         @Html.HiddenFor(m => m.SortDirection)
 
@@ -41,16 +39,20 @@
             @Html.DropDownList("searchBy", searchCategories, new { @class = "mydropdown" })
         </div>
         <div class="block" style="width: 25% !important; display: inline-block; ">
-            @Html.Label("*Search for: ", new { @class = "mylabel" })
+            @Html.Label("Search for: ", new { @class = "mylabel" })
             @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
         </div>
-        <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 50px; display: inline-block;" />
+        @Html.HiddenFor(m => m.PageNumber)
+        <input type="button" id="searchSubmit" name="searchSubmit" value="Search" class="btn btn-default" style="display: inline-block;" />
+
         @Html.ActionLink(linkText: "Undo search",
-                 actionName: "Index",
-                 controllerName: "LogInfo",
-                 routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
-                 htmlAttributes: new { @class = "btn btn-default" })
-    }
+        actionName: "Index",
+        controllerName: "LogInfo",
+        routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
+        htmlAttributes: new { @class = "btn btn-default" })
+
+        @Html.ActionLink("Advanced Search", "AdvancedSearch", "LogInfo")
+    </form>
 <br />
 
 </div>
@@ -62,44 +64,28 @@
         </div>
         <div class="col-md-4">
             <div class="btn-group">
-                @Html.ActionLink(linkText: " << First",
-                                actionName: "Index",
-                                controllerName: "LogInfo",
-                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = 1 },
-                                htmlAttributes: new { @class = "btn btn-default" })
-                @Html.ActionLink(linkText: "< Previous",
-                                actionName: "Index",
-                                controllerName: "LogInfo",
-                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = ((id - 1) != 0) ? (id - 1) : id },
-                                htmlAttributes: new { @class = "btn btn-default" })
-                @Html.ActionLink(linkText: "Next >",
-                                actionName: "Index",
-                                controllerName: "LogInfo",
-                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id },
-                                htmlAttributes: new { @class = "btn btn-default" })
-                @Html.ActionLink(linkText: "Last >>",
-                                actionName: "Index",
-                                controllerName: "LogInfo",
-                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = Model.TotalPages },
-                                htmlAttributes: new { @class = "btn btn-default" })
+                <input type="button" class="btn btn-default" onclick="updateButton(1, '@sortBy', '@sortDir', '', '')" value="<< First">
+
+                <input type="button" class="btn btn-default" onclick="updateButton(((@id - 1) != 0) ? (@id - 1) : @id, '@sortBy', '@sortDir', '', '')" value="< Previous">
+
+                <input type="button" class="btn btn-default" onClick="updateButton(((@id + 1) <= @Model.TotalPages) ? (@id + 1) : @id, '@sortBy', '@sortDir', '', '')" value="Next >">
+
+                <input type="button" class="btn btn-default" onclick="updateButton(@Model.TotalPages, '@sortBy', '@sortDir', '', '')" value="Last >>">
             </div>
         </div>
         <div class="col-md-4">
-            @using (Html.BeginRouteForm("Search", new { controller = "LogInfo", action = "Index" }))
-            {
+            <form name="pageJump">
                 @Html.HiddenFor(m => m.SortBy)
                 @Html.HiddenFor(m => m.SortDirection)
-                @Html.HiddenFor(m => m.SearchBy)
-                @Html.HiddenFor(m => m.SearchInput)
 
                 <div class="block">
                     @Html.Label("Page: ", new { @class = "mylabel" })
                 </div>
                 <div class="block">
-                    @Html.TextBox("id", null, new { @class = "pageinputbox" })
+                    @Html.TextBox("id")
                 </div>
-                <input type="submit" name="btnSubmit" value="Jump to page" class="btn btn-default" style="display: inline-block;" />
-            }
+                <input type="button" id="btnSubmit" value="Jump to page" class="btn btn-default" />
+            </form>
         </div>
     </div>
 </div>
@@ -114,12 +100,12 @@
                 {
                     var sortB = "";
                     var sortD = "";
-                    var className = "";
+                    var className = "sortLink";
 
                     if (sortBy == category)
                     {
                         sortB = sortBy;
-                        className = "sortLink";<!-- If sortBy == the category name, make the link underlined -->
+                        className = "selectedSortLink";<!-- If sortBy == the category name, make the link underlined -->
 
                         if (sortDir == "ASC")
                         { sortD = "DESC"; }
@@ -132,7 +118,7 @@
                         sortD = "ASC";
                     }
                     <td>
-                        @Html.ActionLink(category, "Index", new { sortBy = sortB, sortDir = sortD, searchBy = searchBy, searchInput = searchInput, id = 1 }, new { @class = className })
+                        <input type="button" id="sortButton" value="@category" onclick="updateButton(1, '@sortB', '@sortD', '', '')" class="@className" />
                     </td>
                 }
             </tr>
@@ -176,14 +162,14 @@ else
 <div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
     <form id="usernameForm">
         Your Email: <input type="text" name="usernameEntry" />
-        <button onclick="UpdateImportance()">Update</button>
+        <button onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
     </form>
     <button onclick="closeModal()">Cancel</button>
 </div>
 
 @section scripts
 {
-    <script language="javascript" type="text/javascript">
+<script language="javascript" type="text/javascript">
     var exampleModal;
     var exampleModalVisible = false;
 
@@ -194,6 +180,13 @@ else
     var currentMessage = null;
     var currentMethodName = null;
     var currentObject = null;
+
+    var currentsearchDictionary = @Html.Raw(Json.Encode(searchDict));
+    var currentid = null;
+    var currentsortBy = null;
+    var currentsortDir = null;
+    var currentsearchBy = null;
+    var currentsearchInput = null;
 
     function openModal(UserID, EmailAddress, TimeStamp, WebRequestID, Message, MethodName, Object) {
         event.preventDefault;
@@ -236,8 +229,12 @@ else
         });
     });
 
-    function UpdateImportance() {
+    function UpdateImportance(page, sortB, sortD) {
+        currentid = page;
+        currentsortBy = sortB;
+        currentsortDir = sortD;
         usernameValue = $("[name=usernameEntry]").val();
+
         debugger;
         var model = {
             UserID: currentUserID,
@@ -257,7 +254,6 @@ else
                 username: usernameValue,
                 logToUpdate: model,
             },
-            async: false,
 
             success: function (result) {
                 document.getElementById("usernameForm").reset();
@@ -272,9 +268,11 @@ else
 
                 if (result.IsCreated) {
                     window.location.reload();
+                    //updateButton(currentid, currentsortBy, currentsortDir, "", "");
                 }
                 else {
                     alert(result.ErrorMessage);
+                    window.location.reload();
                 }
             },
 
@@ -325,6 +323,88 @@ else
                 alert(result.ErrorMessage);
             }
         });
-    }
-    </script>
+            }
+
+     $("#btnSubmit").click(function () {
+        debugger;
+        var formData = $('form[name="pageJump"]').serializeArray();
+        var sortBy = formData[0].value;
+        var sortDirection = formData[1].value;
+        var page = formData[2].value;
+
+        updateButton(page, sortBy, sortDirection, "", "");
+    });
+
+    $("#searchSubmit").click(function () {
+        debugger;
+        var formData = $('form[name="searchForm"]').serializeArray();
+        var sortBy = formData[0].value;
+        var sortDirection = formData[1].value;
+        var searchBy = formData[2].value;
+        var searchInput = formData[3].value;
+        var page = formData[4].value;
+
+        updateButton(page, sortBy, sortDirection, searchBy, searchInput);
+    });
+
+    function updateButton(page, sortB, sortD, searchB, searchI) {
+        currentid = page;
+        currentsortBy = sortB;
+        currentsortDir = sortD;
+        currentsearchBy = searchB;
+        currentsearchInput = searchI;
+        debugger;
+
+        const form = document.createElement('form');
+        form.method = 'post';
+        form.action = '/LogInfo/Index';
+
+        var dictionary = {};
+        var index = 0;
+        var newSearch = (currentsearchInput != "");
+
+        for (var key in currentsearchDictionary) {
+            if (currentsearchDictionary.hasOwnProperty(key)) {
+                dictionary["searchDictionary[" + index + "].Key"] = key;
+                dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
+
+                if (newSearch && (currentsearchBy == key)) { //update searchDictionary based on new search    
+                    dictionary["searchDictionary[" + index + "].Key"] = currentsearchBy;
+                    dictionary["searchDictionary[" + index + "].Value"] = currentsearchInput;
+                }
+            }
+            index = index + 1;
+        }
+
+        for (var key in dictionary) {
+            const hiddenField = document.createElement('input');
+            hiddenField.hidden = true;
+            hiddenField.name = key;
+            hiddenField.value = dictionary[key];
+            form.appendChild(hiddenField);
+        }
+
+        const id = document.createElement('input');
+        id.hidden = true;
+        id.name = 'id';
+        id.value = currentid;
+        form.appendChild(id);
+
+        const sortBy = document.createElement('input');
+        sortBy.hidden = true;
+        sortBy.name = 'sortBy';
+        sortBy.value = currentsortBy;
+        form.appendChild(sortBy);
+
+        const sortDir = document.createElement('input');
+        sortDir.hidden = true;
+        sortDir.name = 'sortDir';
+        sortDir.value = currentsortDir;
+        form.appendChild(sortDir);
+
+        document.body.appendChild(form);
+        form.submit();
+    };
+
+</script>
 }
