--- a/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
+++ b/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
@@ -42,7 +42,7 @@
             @Html.Label("Search for: ", new { @class = "mylabel" })
             @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
         </div>
-        @Html.HiddenFor(m => m.PageNumber)
+        <!-- Html.HiddenFor(m => m.PageNumber) -->
         <input type="button" id="searchSubmit" name="searchSubmit" value="Search" class="btn btn-default" style="display: inline-block;" />
 
         @Html.ActionLink(linkText: "Undo search",
@@ -265,10 +265,12 @@ else
                 currentParameters = null;
 
                 if (result.IsCreated) {
-                    updateButton(currentid, currentsortBy, currentsortDir, "", "");
+                    //updateButton(currentid, currentsortBy, currentsortDir, "", "");
+                    window.location.reload();
                 }
                 else {
                     alert(result.ErrorMessage);
+                    window.location.reload();
                 }
             },
 
@@ -338,9 +340,9 @@ else
         var sortDirection = formData[1].value;
         var searchBy = formData[2].value;
         var searchInput = formData[3].value;
-        var page = formData[4].value;
+        //var page = formData[4].value;
 
-        updateButton(page, sortBy, sortDirection, searchBy, searchInput);
+        updateButton(1, sortBy, sortDirection, searchBy, searchInput);
     });
 
     function updateButton(page, sortB, sortD, searchB, searchI) {
