--- a/InternshipSkeleton/Views/LogMySql/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/SearchIndex.cshtml
@@ -23,42 +23,14 @@
 
     List<SelectListItem> searchCategories = new List<SelectListItem>();
     searchCategories.Add(new SelectListItem { Text = "Time Stamp", Value = "DateTimeStamp" });
-    searchCategories.Add(new SelectListItem { Text = "Function", Value = "logmysql.Function" });
+    searchCategories.Add(new SelectListItem { Text = "Function", Value = "Function" });
     searchCategories.Add(new SelectListItem { Text = "Message", Value = "Message" });
     searchCategories.Add(new SelectListItem { Text = "Type", Value = "Type" });
     searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
 
-<div class="container" style="padding-top: 50px !important;">
-    <form name="searchForm">
-        @Html.HiddenFor(m => m.SortBy)
-        @Html.HiddenFor(m => m.SortDirection)
-
-        <div class="block" style="width: 25% !important; display: inline-block; ">
-            @Html.Label("Search by: ", new { @class = "mylabel" })
-            @Html.DropDownList("searchBy", searchCategories, new { @class = "mydropdown" })
-        </div>
-        <div class="block" style="width: 25% !important; display: inline-block; ">
-            @Html.Label("Search for: ", new { @class = "mylabel" })
-            @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
-        </div>
-        @Html.HiddenFor(m => m.PageNumber)
-        <input type="button" id="searchSubmit" name="searchSubmit" value="Search" class="btn btn-default" style="display: inline-block;" />
-
-        @Html.ActionLink(linkText: "Undo search",
-        actionName: "Index",
-        controllerName: "LogMySql",
-        routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
-        htmlAttributes: new { @class = "btn btn-default" })
-
-        @Html.ActionLink("Advanced Search", "AdvancedSearch", "LogMySql")
-    </form>
-</div>
-
-<br />
-
 <!-- Paging stuff -->
-<div class="container">
+<div class="container" style="padding-top: 60px !important;">
     <div class="row">
         <div class="col-md-4">
             <label class="pageLabel"> Current page: @Model.PageNumber / @Model.TotalPages</label>
@@ -74,22 +46,16 @@
                 <input type="button" class="btn btn-default" onclick="updateButton(@Model.TotalPages, '@sortBy', '@sortDir')" value="Last >>">
             </div>
         </div>
-        <div class="col-md-4">
-            <form name="pageJump">
-                @Html.HiddenFor(m => m.SortBy)
-                @Html.HiddenFor(m => m.SortDirection)
-
-                <div class="block">
-                    @Html.Label("Page: ", new { @class = "mylabel" })
-                </div>
-                <div class="block">
-                    @Html.TextBox("id")
-                </div>
-                <input type="button" id="btnSubmit" value="Jump to page" class="btn btn-default" />
-            </form>
+        <div class="col-md-2">
+            @Html.ActionLink("Back to table", "Index", null, new { @class = "btn btn-default" })
+        </div>
+        <div class="col-md-2">
+            @Html.ActionLink("New Search", "AdvancedSearch")
         </div>
     </div>
 </div>
+
+<br />
 
 @if (!noResults)
 {
@@ -126,26 +92,26 @@
         <tbody>
             @foreach (LogMySqlDataModel currentRow in Model.Items)
             {
-            <tr>
-                <td>@currentRow.DateTimeStamp</td>
-                <td>@currentRow.Function</td>
-                <td>@currentRow.Message</td>
-                <td>@currentRow.Type</td>
-                <td>
-                    @if (currentRow.Important == null) //button to mark as important
-                    {
-                        string fixedMessage = currentRow.Message.ToString().Replace("'", "\\'");
-                        <img src="~/Content/unfilledStar.jpg" class="unfilledIcon" onclick="openModal('@currentRow.DateTimeStamp.ToString()',
+                <tr>
+                    <td>@currentRow.DateTimeStamp</td>
+                    <td>@currentRow.Function</td>
+                    <td>@currentRow.Message</td>
+                    <td>@currentRow.Type</td>
+                    <td>
+                        @if (currentRow.Important == null) //button to mark as important
+                        {
+                            string fixedMessage = currentRow.Message.ToString().Replace("'", "\\'");
+                            <img src="~/Content/unfilledStar.jpg" class="unfilledIcon" onclick="openModal('@currentRow.DateTimeStamp.ToString()',
                             '@fixedMessage', '@currentRow.Function.ToString()','@currentRow.Type.ToString()')">
-                    }
-                    else //button to unmark as important
-                    {
-                        string fixedMessage = currentRow.Message.ToString().Replace("'", "\\'");
-                        <img src="~/Content/filledStar.jpg" class="filledIcon" onclick="markUnimportant('@currentRow.DateTimeStamp.ToString()',
+                        }
+                        else //button to unmark as important
+                        {
+                            string fixedMessage = currentRow.Message.ToString().Replace("'", "\\'");
+                            <img src="~/Content/filledStar.jpg" class="filledIcon" onclick="markUnimportant('@currentRow.DateTimeStamp.ToString()',
                             '@fixedMessage', '@currentRow.Function.ToString()','@currentRow.Type.ToString()')">
-                    }
-                </td>
-            </tr>
+                        }
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
@@ -163,9 +129,7 @@ else
     <button onclick="closeModal()">Cancel</button>
 </div>
 
-@section scripts
-{
-    <script language="javascript" type="text/javascript">
+<script>
     var exampleModal;
     var exampleModalVisible = false;
 
@@ -174,12 +138,11 @@ else
     var currentFunction = null;
     var currentType = null;
 
-    var currentsearchDictionary = @Html.Raw(Json.Encode(searchDict));
     var currentid = null;
     var currentsortBy = null;
     var currentsortDir = null;
-    var currentsearchBy = null;
-    var currentsearchInput = null;
+    var currentsearchDictionary = @Html.Raw(Json.Encode(searchDict))
+
 
     function openModal(DateTimeStamp, Message, Function, Type) {
         event.preventDefault;
@@ -216,7 +179,7 @@ else
         });
     });
 
-    function UpdateImportance(page, sortB, sortD) {
+       function UpdateImportance(page, sortB, sortD) {
         currentid = page;
         currentsortBy = sortB;
         currentsortDir = sortD;
@@ -294,55 +257,25 @@ else
                 alert(result.ErrorMessage);
             }
         });
-            }
+    }
 
-     $("#btnSubmit").click(function () {
-        debugger;
-        var formData = $('form[name="pageJump"]').serializeArray();
-        var sortBy = formData[0].value;
-        var sortDirection = formData[1].value;
-        var page = formData[2].value;
-
-        updateButton(page, sortBy, sortDirection, "", "");
-    });
-
-    $("#searchSubmit").click(function () {
-        debugger;
-        var formData = $('form[name="searchForm"]').serializeArray();
-        var sortBy = formData[0].value;
-        var sortDirection = formData[1].value;
-        var searchBy = formData[2].value;
-        var searchInput = formData[3].value;
-        var page = formData[4].value;
-
-        updateButton(page, sortBy, sortDirection, searchBy, searchInput);
-    });
-
-    function updateButton(page, sortB, sortD, searchB, searchI) {
+    function updateButton(page, sortB, sortD) {
         currentid = page;
         currentsortBy = sortB;
         currentsortDir = sortD;
-        currentsearchBy = searchB;
-        currentsearchInput = searchI;
         debugger;
 
         const form = document.createElement('form');
         form.method = 'post';
-        form.action = '/LogMySql/Index';
+        form.action = '/LogMySql/SearchIndex';
 
         var dictionary = {};
         var index = 0;
-        var newSearch = (currentsearchInput != "");
 
         for (var key in currentsearchDictionary) {
             if (currentsearchDictionary.hasOwnProperty(key)) {
                 dictionary["searchDictionary[" + index + "].Key"] = key;
                 dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
-
-                if (newSearch && (currentsearchBy == key)) { //update searchDictionary based on new search    
-                    dictionary["searchDictionary[" + index + "].Key"] = currentsearchBy;
-                    dictionary["searchDictionary[" + index + "].Value"] = currentsearchInput;
-                }
             }
             index = index + 1;
         }
@@ -375,5 +308,4 @@ else
         document.body.appendChild(form);
         form.submit();
     };
-    </script>
-}
+</script>
