--- a/InternshipSkeleton/Views/LogMySql/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/SearchIndex.cshtml
@@ -84,7 +84,7 @@
                         sortD = "ASC";
                     }
                     <td>
-                        <input type="button" id="sortButton" value="@category" onclick="updateButton(1, '@sortB', '@sortD')" class="@className" />
+                        <input id="sortButton" value="@category" onclick="updateButton(1, '@sortB', '@sortD')" class="@className" />
                     </td>
                 }
             </tr>
