--- a/InternshipSkeleton/Views/LogException/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogException/SearchIndex.cshtml
@@ -78,7 +78,7 @@
                         sortD = "ASC";
                     }
                 <td>
-                    <input type="button" id="sortButton" value="@category" onclick="updateButton(1, '@sortB', '@sortD')" class="@className" />
+                    <input id="sortButton" value="@category" onclick="updateButton(1, '@sortB', '@sortD')" class="@className" />
                 </td>
                 }
             </tr>
