--- a/InternshipSkeleton/Views/Shared/_Layout.cshtml
+++ b/InternshipSkeleton/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
             </div>
         </div>
     </div>
+   
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -57,3 +58,19 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+
+<script>
+   /* $('#topheader .navbar-nav a').on('click', function () {
+        debugger;
+        $('#topheader .navbar-nav').find('li.active').removeClass('active');
+        $(this).parent('li').addClass('active');
+    }); */
+
+    var selector = '.nav li';
+
+    $(selector).on('click', function () {
+        debugger;
+        $(selector).removeClass('active');
+        $(this).addClass('active');
+    });
+</script>
