working on css things

--- a/InternshipSkeleton/Content/loggingProjectStyle.css
+++ b/InternshipSkeleton/Content/loggingProjectStyle.css
@@ -137,3 +137,14 @@ tr:nth-child(even) {
     color: #fff;
 }
 
+.body-content {
+    padding-top: 50px;
+}
+
+.tableTitle {
+    text-align: center;
+}
+
+.dateRange {
+    padding:0px;
+}
