--- a/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
+++ b/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
@@ -28,8 +28,9 @@
     searchCategories.Add(new SelectListItem { Text = "Parameters", Value = "Parameters" });
     searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
-
-<div class="container" style="padding-top: 50px !important;">
+<h3 class="tableTitle">LogControllerAction Table</h3>
+<br />
+<div class="container">
     <form name="searchForm">
         @Html.HiddenFor(m => m.SortBy)
         @Html.HiddenFor(m => m.SortDirection)
@@ -42,7 +43,6 @@
             @Html.Label("Search for: ", new { @class = "mylabel" })
             @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
         </div>
-        <!-- Html.HiddenFor(m => m.PageNumber) -->
         <input type="button" id="searchSubmit" name="searchSubmit" value="Search" class="btn btn-default" style="display: inline-block;" />
 
         @Html.ActionLink(linkText: "Undo search",
@@ -135,14 +135,14 @@
                     <td>
                         @if (currentRow.Important == null) //button to mark as important
                         {
-                            <img src="~/Content/unfilledStar.jpg" class="unfilledIcon" onclick="openModal('@currentRow.UserID.ToString()',
+                            <img src="~/Content/unfilledStar.png" class="unfilledIcon" onclick="openModal('@currentRow.UserID.ToString()',
                             '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
                             '@currentRow.WebRequestID.ToString()', '@currentRow.ControllerName.ToString()',
                             '@currentRow.ActionName.ToString()', '@currentRow.Parameters.ToString()')">
                         }
                         else //button to unmark as important
                         {
-                            <img src="~/Content/filledStar.jpg" class="filledIcon" onclick="markUnimportant('@currentRow.UserID.ToString()',
+                            <img src="~/Content/filledStar.png" class="filledIcon" onclick="markUnimportant('@currentRow.UserID.ToString()',
                             '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
                             '@currentRow.WebRequestID.ToString()', '@currentRow.ControllerName.ToString()',
                             '@currentRow.ActionName.ToString()', '@currentRow.Parameters.ToString()')">
