--- a/InternshipSkeleton/Views/LogException/AdvancedSearch.cshtml
+++ b/InternshipSkeleton/Views/LogException/AdvancedSearch.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Log Exception - Advanced Search</h2>
+<h4>LogException - Advanced Search</h4>
 
 <!-- Email, Timestamp, Message, Method Name, Source, Stack Trace, Important (both IsImportant? and who marked as important) -->
 <!-- Email, Message, MethodName, Source, StackTrace - string search -->
@@ -20,7 +20,7 @@
     @Html.TextBox("EmailAddress")
 
     @Html.Label("Date Range")
-    <div class="container">
+    <div class="container dateRange">
         <div class="block">
             <input name="beginDate" id="beginDate" type="date" min="2019-01-01" />
         </div>
