--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -32,32 +32,33 @@
     searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
 
-<div class="container" style="padding-top: 50px !important;">
-    <form name="searchForm" class="block">
+<h3 class="tableTitle">Log Exception Table</h3>
+<br />
+
+<div class="container">
+    <form name="searchForm">
         @Html.HiddenFor(m => m.SortBy)
         @Html.HiddenFor(m => m.SortDirection)
 
-        <div class="block" style="width: 25% !important;">
+        <div class="block" style="width: 25% !important; display:inline-block;">
             @Html.Label("Search by: ", new { @class = "mylabel" })
             @Html.DropDownList("searchBy", searchCategories, new { @class = "mydropdown" })
         </div>
-        <div class="block" style="width: 25% !important;">
+        <div class="block" style="width: 25% !important; display: inline-block;">
             @Html.Label("Search for: ", new { @class = "mylabel" })
             @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
         </div>
         @Html.HiddenFor(m => m.PageNumber)
-        <input id="searchSubmit" name="searchSubmit" value="Search" class="btn btn-default" style="display: inline-block; width: 100px;" />
-    </form>
-    <div class="block">
+        
+        <input type="button" id="searchSubmit" name="searchSubmit" value="Search" class="btn btn-default" style="display: inline-block;" />
         @Html.ActionLink(linkText: "Undo search",
-        actionName: "Index",
-        controllerName: "LogException",
-        routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
-        htmlAttributes: new { @class = "btn btn-default" })
-    </div>
-    <div class="block">
+         actionName: "Index",
+         controllerName: "LogException",
+         routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
+         htmlAttributes: new { @class = "btn btn-default" })
+
         @Html.ActionLink("Advanced Search", "AdvancedSearch", "LogException")
-    </div>
+    </form>
 </div>
 
 <br />
@@ -78,7 +79,7 @@
                 <input type="button" class="btn btn-default" onclick="updateButton(@Model.TotalPages, '@sortBy', '@sortDir')" value="Last >>">
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <form name="pageJump">
                 @Html.HiddenFor(m => m.SortBy)
                 @Html.HiddenFor(m => m.SortDirection)
@@ -89,10 +90,8 @@
                 <div class="block">
                     @Html.TextBox("id")
                 </div>
+                <input type="button" id="btnSubmit" value="Jump to page" class="btn btn-default" />
             </form>
-        </div>
-        <div class="col-md-2">
-            <input id="btnSubmit" value="Jump to page" class="btn btn-default" />
         </div>
     </div>
 </div>    
@@ -125,7 +124,7 @@
                         sortD = "ASC";
                     }
                     <td>
-                        <input id="sortButton" value ="@category" onclick="updateButton(1, '@sortB', '@sortD')" class="@className" />
+                        <input type="button" id="sortButton" value ="@category" onclick="updateButton(1, '@sortB', '@sortD')" class="@className" />
                     </td>
                 }
             </tr>
@@ -164,9 +163,9 @@ else
 <div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
     <form id="usernameForm">
         Your Email: <input type="text" name="usernameEntry" />
-        <button onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
+        <button class="btn-default" onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
     </form>
-    <button onclick="closeModal()">Cancel</button>
+    <button class="btn-default" onclick="closeModal()">Cancel</button>
 </div>
 
 @section scripts
