--- a/InternshipSkeleton/Views/LogInfo/AdvancedSearch.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/AdvancedSearch.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Log Exception - Advanced Search</h2>
+<h4>LogInfo - Advanced Search</h4>
 
 <!-- "EmailAddress", "TimeStamp", "Message", "MethodName", "Object", "Important" -->
 
@@ -15,7 +15,7 @@
     @Html.TextBox("EmailAddress")
 
     @Html.Label("Date Range")
-    <div class="container">
+    <div class="container dateRange">
         <div class="block">
             <input name="beginDate" id="beginDate" type="date" min="2019-01-01" />
         </div>
