--- a/InternshipSkeleton/Views/LogMySql/AdvancedSearch.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/AdvancedSearch.cshtml
@@ -6,12 +6,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Log MySql - Advanced Search</h2>
+<h4>LogMySql - Advanced Search</h4>
 
 
 <form name="myForm">
     @Html.Label("Date Range")
-    <div class="container">
+    <div class="container dateRange">
         <div class="block">
             <input name="beginDate" id="beginDate" type="date" min="2019-01-01" />
         </div>
