--- a/InternshipSkeleton/Views/LogMySql/Index.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/Index.cshtml
@@ -28,8 +28,10 @@
     searchCategories.Add(new SelectListItem { Text = "Type", Value = "Type" });
     searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
+<h3 class="tableTitle">LogMySql Table</h3>
+<br />
 
-<div class="container" style="padding-top: 50px !important;">
+<div class="container">
     <form name="searchForm">
         @Html.HiddenFor(m => m.SortBy)
         @Html.HiddenFor(m => m.SortDirection)
@@ -135,13 +137,13 @@
                     @if (currentRow.Important == null) //button to mark as important
                     {
                         string fixedMessage = currentRow.Message.ToString().Replace("'", "\\'");
-                        <img src="~/Content/unfilledStar.jpg" class="unfilledIcon" onclick="openModal('@currentRow.DateTimeStamp.ToString()',
+                        <img src="~/Content/unfilledStar.png" class="unfilledIcon" onclick="openModal('@currentRow.DateTimeStamp.ToString()',
                             '@fixedMessage', '@currentRow.Function.ToString()','@currentRow.Type.ToString()')">
                     }
                     else //button to unmark as important
                     {
                         string fixedMessage = currentRow.Message.ToString().Replace("'", "\\'");
-                        <img src="~/Content/filledStar.jpg" class="filledIcon" onclick="markUnimportant('@currentRow.DateTimeStamp.ToString()',
+                        <img src="~/Content/filledStar.png" class="filledIcon" onclick="markUnimportant('@currentRow.DateTimeStamp.ToString()',
                             '@fixedMessage', '@currentRow.Function.ToString()','@currentRow.Type.ToString()')">
                     }
                 </td>
