--- a/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
+++ b/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
@@ -28,8 +28,10 @@
     searchCategories.Add(new SelectListItem { Text = "Parameters", Value = "Parameters" });
     searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
+<h3 class="tableTitle">LogWebRequest Table</h3>
+<br />
 
-<div class="container" style="padding-top: 50px !important;">
+<div class="container">
     @using (Html.BeginRouteForm("Search", new { controller = "LogWebRequest", action = "Index" }))
     {
         @Html.HiddenFor(m => m.SortBy)
@@ -147,12 +149,12 @@
                 <td>
                     @if (currentRow.Important == null) //button to mark as important
                     {
-                        <img src="~/Content/unfilledStar.jpg" class="unfilledIcon" onclick="openModal('@currentRow.TimeStamp.ToString()',
+                        <img src="~/Content/unfilledStar.png" class="unfilledIcon" onclick="openModal('@currentRow.TimeStamp.ToString()',
                         '@currentRow.WebRequestID.ToString()', '@currentRow.UserID.ToString()', '@currentRow.RawURL.ToString()')">
                     }
                     else //button to unmark as important
                     {
-                        <img src="~/Content/filledStar.jpg" class="filledIcon" onclick="markUnimportant('@currentRow.TimeStamp.ToString()',
+                        <img src="~/Content/filledStar.png" class="filledIcon" onclick="markUnimportant('@currentRow.TimeStamp.ToString()',
                         '@currentRow.WebRequestID.ToString()', '@currentRow.UserID.ToString()', '@currentRow.RawURL.ToString()')">
                     }
                 </td>
