--- a/InternshipSkeleton/Views/LogWebResponse/Index.cshtml
+++ b/InternshipSkeleton/Views/LogWebResponse/Index.cshtml
@@ -29,8 +29,10 @@
     searchCategories.Add(new SelectListItem { Text = "Redirect Location", Value = "RedirectLocation" });
     searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
+<h3 class="tableTitle">LogWebResponse Table</h3>
+<br />
 
-<div class="container" style="padding-top: 50px !important;">
+<div class="container">
     @using (Html.BeginRouteForm("Search", new { controller = "LogWebResponse", action = "Index" }))
     {
         @Html.HiddenFor(m => m.SortBy)
@@ -149,13 +151,13 @@
                         @if (currentRow.Important == null) //button to mark as important
                         {
                             <!-- Left out redirect location in these -could be causing problems -->
-                            <img src="~/Content/unfilledStar.jpg" class="unfilledIcon" onclick="openModal('@currentRow.UserID.ToString()',
+                            <img src="~/Content/unfilledStar.png" class="unfilledIcon" onclick="openModal('@currentRow.UserID.ToString()',
                             '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
                             '@currentRow.WebRequestID.ToString()', '@currentRow.Status.ToString()')">
                         }
                         else //button to unmark as important
                         {
-                            <img src="~/Content/filledStar.jpg" class="filledIcon" onclick="markUnimportant('@currentRow.UserID.ToString()',
+                            <img src="~/Content/filledStar.png" class="filledIcon" onclick="markUnimportant('@currentRow.UserID.ToString()',
                             '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
                             '@currentRow.WebRequestID.ToString()', '@currentRow.Status.ToString()')">
                         }
